# voxel

./: CMakeLists.txt
includes/: index_buffer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
res/shaders/: basic.glsl
src/: index_buffer.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
